test: ArrayList kann auch nicht modifiziert werden https://www.w3tutorials.net/blog/modifying-local-variable-from-inside-lambda/